# Job_Search_App

./: README.md  conftest.py  main.py  pyproject.toml
src/: json_vacancy_data.py  utils.py  vacancy.py  vacancy_data.py
src/api/: hh_vacancy_api.py  vacancy_api.py
tests/: test_json_vacancy_data.py  test_vacancy.py
